@@ -18,7 +18,7 @@ requires 'Scalar::Util' => '0';
 
 requires 'AnyEvent'            => '0';
 requires 'JSON'                => '0';
-requires 'Protocol::SocketIO'  => '0';
+requires 'Protocol::SocketIO'  => '0.04';
 requires 'Protocol::WebSocket' => '0.009006';
 
 requires 'Test::More' => '0';
