@@ -2,6 +2,9 @@ Revision history for perl module PocketIO
 
 0.13 2012-01-28
 
+- Cleanup test requirements
+- Require new version of Protocol::SocketIO
+
 0.12 2012-01-25
 
  - Fixed test requirements
